# wrs2020

./: .gitignore  .rosinstall  gitignore (copy)
linear_motion/src/: linear_z.cpp
mobile_dual_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
mobile_dual_arm_config/config/: controllers.yaml  fake_controllers.yaml  mobile_dual_arm.srdf  mobile_dual_arm_control_moveit.yaml  ros_controllers.yaml
mobile_dual_arm_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo_gazebo.launch  demo_old.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  mobile_dual_arm_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
mobile_dual_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mobile_dual_arm_moveit_config/config/: controllers.yaml  fake_controllers.yaml  mobile_dual_arm.srdf  mobile_dual_arm_control_moveit.yaml  old_mobile_dual_arm_control_moveit.yaml  ros_controllers.yaml
mobile_dual_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  mobile_dual_arm_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
mobile_dual_arm_notool_config/: .setup_assistant  CMakeLists.txt  package.xml
mobile_dual_arm_notool_config/config/: controllers.yaml  kinematics.yaml  mobile_dual_arm.srdf  mobile_dual_arm_control_moveit.yaml  ompl_planning.yaml  ros_controllers.yaml
mobile_dual_arm_notool_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_old.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  mobile_dual_arm_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
mobile_dual_arm_notoolend_config/: .setup_assistant  CMakeLists.txt  package.xml
mobile_dual_arm_notoolend_config/config/: fake_controllers.yaml  joint_limits.yaml  mobile_dual_arm.srdf  (+1 more)
robotiq_2finger_grippers/robotiq_2f_gripper_control/: CMakeLists.txt
robotiq_2finger_grippers/robotiq_2f_gripper_control/include/robotiq_2f_gripper_control/: gripper_control.h
robotiq_2finger_grippers/robotiq_2f_gripper_control/launch/: robotiq_action_server.launch
robotiq_2finger_grippers/robotiq_2f_gripper_control/scripts/: robotiq_2f_action_server.py
robotiq_2finger_grippers/robotiq_2f_gripper_control/src/: gripper_control.cpp
robotiq_2finger_grippers/robotiq_2f_gripper_control/src/robotiq_2f_gripper_control/: gripper_control.cpp
strategy_dual_arm/: CMakeLists.txt
udev_rules/: 99-single-arm.rules
(+92 files in other folders)
